--- a/5_Python_16_17_Sep_if_else_Functions_lambda_map_reduce_filter.ipynb
+++ b/5_Python_16_17_Sep_if_else_Functions_lambda_map_reduce_filter.ipynb
@@ -941,6 +941,8 @@
    "outputs": [],
    "source": [
     "# map,reduce, filter"
+"# Iterable is an object which can be looped over or iterated over with the help of a for loop. 
+# Objects like lists, tuples, sets, dictionaries, strings, etc. are called iterables."
    ]
   },
   {
