--- a/1_python_basic_variables.ipynb
+++ b/1_python_basic_variables.ipynb
@@ -932,7 +932,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 99\n"
@@ -993,7 +993,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " fsfdfd\n"
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "522fe1ce-4675-4d25-a718-9ba430254245",
    "metadata": {},
    "outputs": [],
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "fab2393b-4446-419b-a63a-18aac7f73140",
    "metadata": {},
    "outputs": [
@@ -1272,16 +1272,21 @@
        "''"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
+    " 0  1  2  3  4  5  6  7\n",
+    " p  w  s  k  i  l  l  s\n",
+    "-8 -7 -6 -5 -4 -3 -2 -1\n",
+    "\"\"\"\n",
     "s1[7:3] # problem: jump positive\n",
     "# due to...\n",
     "# data slicing is going in negative direction but\n",
-    "# slice is jumping(step) in positive direction\n",
+    "# slice is jumping(step) [7:3:0] where 0 is in positive direction\n",
     "# there is a conflict but getting blank not \n",
     "# getting error"
    ]
@@ -1311,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "bd213826-a88e-45ec-8a75-325df3e5c355",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1326,7 @@
        "''"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1334,7 @@
    "source": [
     "s1[-1:-5]\n",
     "# jump positive problem occured\n",
-    "# moving in a negative side with a jump(step)\n",
+    "# moving in a negative side with a jump(step) [-1:-5:1]\n",
     "# of positive by 1, which conflict occurs\n",
     "# shows as blank not an error"
    ]
@@ -1552,7 +1557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
