--- a/4_Python_if_loop_Functions.ipynb
+++ b/4_Python_if_loop_Functions.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter two number 1 1\n"
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 1\n",
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 1\n",
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 13\n"
@@ -380,7 +380,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 2\n"
@@ -410,7 +410,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " we\n",
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 2\n",
@@ -470,7 +470,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 1\n",
@@ -505,7 +505,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " abcdefgh/\n"
@@ -963,6 +963,8 @@
    "source": [
     "vow=\"aeiou\"\n",
     "# a = lambda inp: [\"true\" if i in vow else print(\"false\") for i in inp]\n",
+    "\n",
+    "# list comprehension only \"if and else\" statement using for loop.\n",
     "a = lambda inp: [\"true\" if i in vow else \"false\" for i in inp]\n",
     "a(\"welcome\")"
    ]
@@ -1007,7 +1009,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a string:  welcome\n"
@@ -1028,6 +1030,7 @@
     "vowels = ['a','e','i','o','u','A','E','I','O','U']\n",
     "string = input(\"Enter a string: \")\n",
     "\n",
+    "# list comprehension only \"if\" statement using for loop.\n",
     "vowels_list = [string[i] for i in range(len(string)) if string[i] in vowels]\n",
     "vowels_list"
    ]
