--- a/8_Python_7_14_15_Oct.ipynb
+++ b/8_Python_7_14_15_Oct.ipynb
@@ -818,7 +818,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
+   "id": "6a6a5d0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nothing to Find\n",
+      "Area of square: 100\n",
+      "Area of Rectangle: 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Method overloading concept of help of parameters\n",
+    "class Area:\n",
+    "    def find_area(self,a=None,b=None):\n",
+    "        if a!=None and b!=None:\n",
+    "             print(\"Area of Rectangle:\",(a*b))\n",
+    "        elif a!=None:\n",
+    "            print(\"Area of square:\",(a*a))\n",
+    "        else:\n",
+    "\t        print(\"Nothing to Find\")\n",
+    "             \n",
+    "obj1=Area()\n",
+    "obj1.find_area()\n",
+    "obj1.find_area(10)\n",
+    "obj1.find_area(10,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "4808a899-d825-4287-9f82-f6750c0f7bd5",
    "metadata": {},
    "outputs": [
@@ -827,7 +860,7 @@
      "output_type": "stream",
      "text": [
       "5 34\n",
-      "<__main__.bigdata object at 0x7f5df658f670>\n"
+      "<__main__.bigdata object at 0x0000020BE7BB8C10>\n"
      ]
     }
    ],
@@ -1544,7 +1577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
