--- a/5_Python_16_17_Sep_if_else_Functions_lambda_map_reduce_filter.ipynb
+++ b/5_Python_16_17_Sep_if_else_Functions_lambda_map_reduce_filter.ipynb
@@ -940,8 +940,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# map,reduce, filter",
-    "# Iterable is an object which can be looped over or iterated over with the help of a for loop.",
+    "# map,reduce, filter\n",
+    "# Iterable is an object which can be looped over or iterated over with the help of a for loop.\n",
     "# Objects like lists, tuples, sets, dictionaries, strings, etc. are called iterables."
    ]
   },
@@ -1279,11 +1279,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fc74a59f-90d7-446f-bbf5-eac3774aeeab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci sequence:\n",
+      "0 1 1 2 3 5 8 13 21 34 "
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to display the Fibonacci sequence\n",
+    "\n",
+    "def recur_fibo(n):\n",
+    "   if n <= 1:\n",
+    "       return n\n",
+    "   else:\n",
+    "       return(recur_fibo(n-1) + recur_fibo(n-2))\n",
+    "\n",
+    "nterms = 10\n",
+    "\n",
+    "# check if the number of terms is valid\n",
+    "if nterms <= 0:\n",
+    "   print(\"Plese enter a positive integer\")\n",
+    "else:\n",
+    "   print(\"Fibonacci sequence:\")\n",
+    "   for i in range(nterms):\n",
+    "       print(recur_fibo(i),end=\" \")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1310,7 +1337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
