--- a/6_Python_23_24_Sep_While_Recursion_Iterable_Iterators_yield.ipynb
+++ b/6_Python_23_24_Sep_While_Recursion_Iterable_Iterators_yield.ipynb
@@ -130,7 +130,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter s for stop g\n"
@@ -144,7 +144,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter s for stop s\n"
@@ -207,7 +207,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter task 1\n",
@@ -535,17 +535,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "68a0d1da-58db-4efe-97e7-30f1d25b7988",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
     "        return False\n",
     "    else:\n",
     "        return pesq(n,s+1)\n",
-    "pesq(5)"
+    "pesq(4)"
    ]
   },
   {
@@ -802,12 +802,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "cdb3be8c-e458-4569-a13b-4e2c53c1a692",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# string, list, tuple, dictionary is iterable object, so convert into iterator of by extracting data one by one\n",
+    "# string, list, tuple, set, dictionary is iterable object, so convert into iterator of by extracting data one by one\n",
     "# bool, integer, float is not iterable object"
    ]
   },
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 6,
    "id": "f99ddf48-e0aa-47b2-8e45-3684abd25aeb",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object count_fun at 0x7f3b282f30d0>\n"
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
      ]
     }
    ],
@@ -1196,12 +1196,12 @@
     "        i=i+1\n",
     "k  = count_fun(9)\n",
     "\n",
-    "print(k)"
+    "print(list(k))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "id": "da3fdfcb-2a68-46e0-8efd-e7062d3b3736",
    "metadata": {},
    "outputs": [],
@@ -1356,7 +1356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
