--- a/3_Python_operators.ipynb
+++ b/3_Python_operators.ipynb
@@ -656,11 +656,16 @@
     "# sign bit changes from positive sign to negative sign\n",
     "# positive sign is 0\n",
     "# negative sign is 1\n",
-    "# 1010\n",
-    "# 0101\n",
-    "# 1010\n",
-    "#    1\n",
-    "# 1011"
+    "# sign  number\n",
+    "# 0     1010\n",
+    "# 1     0101  # -5, computer will not store negative values\n",
+    "              # computer will take 2's compliment of -5\n",
+    "\n",
+    "# 1010  #   1's compliment\n",
+    "#    1  # + 1\n",
+    "# 1011  # -11\n",
+    "\n",
+    "# Short cut of ~10 is -11, where next number from present number and adding '-'"
    ]
   },
   {
