--- a/5_Python_16_17_Sep_if_else_Functions_lambda_map_reduce_filter.ipynb
+++ b/5_Python_16_17_Sep_if_else_Functions_lambda_map_reduce_filter.ipynb
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "eceb0855-f7b5-4d78-9622-fa66a42077fd",
    "metadata": {},
    "outputs": [],
@@ -686,23 +686,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "8e32d9f0-1560-4a55-bc14-56f6618f4d12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'even number'"
+       "'odd number'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y(2)"
+    "y(3)"
    ]
   },
   {
