--- a/6_Python_23_24_Sep_While_Recursion_Iterable_Iterators_yield.ipynb
+++ b/6_Python_23_24_Sep_While_Recursion_Iterable_Iterators_yield.ipynb
@@ -328,17 +328,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "7792bc50-4705-497f-b3bb-43a2708b9382",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 76\n",
+      "555 76\n",
+      "4 555\n",
+      "3 555\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "76"
+       "555"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,6 +356,7 @@
    "source": [
     "# find max number from given list\n",
     "def maxx(a,b):\n",
+    "    print(a,b)\n",
     "    if a>b:\n",
     "        return a\n",
     "    return b\n",
@@ -356,7 +367,7 @@
     "    else:\n",
     "        return maxx(l[0], fun(l[1::]))\n",
     "    \n",
-    "fun([3,4,5,6,76])"
+    "fun([3,4,555,6,76])"
    ]
   },
   {
