--- a/7_Python_30_Sep_1_Oct_Exception_class_obj_init.ipynb
+++ b/7_Python_30_Sep_1_Oct_Exception_class_obj_init.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "40112235-f871-4bcd-953c-e84449b710c2",
    "metadata": {},
    "outputs": [
@@ -155,14 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " int\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "invalid literal for int() with base 10: 'int'\n"
+      "Value Error:  invalid literal for int() with base 10: 'll'\n"
      ]
     }
    ],
@@ -173,8 +166,14 @@
     "    c=a/b\n",
     "except TypeError as t:\n",
     "    print(t)\n",
+    "    # geek = \"Geeks\"\n",
+    "    # num = 4\n",
+    "    # print(geek + num + geek)\n",
     "except ValueError as v:\n",
-    "    print(v)\n",
+    "    print(\"Value Error: \",v)\n",
+    "    # import math\n",
+    "    # math.sqrt(-20) # number cannot be negative\n",
+    "\n",
     "except ZeroDivisionError as z:\n",
     "    print(z)"
    ]
